--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,43 @@ section {
 
 .how-it-works-image {
   flex: 1;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  perspective: 1000px;
+  min-height: 400px; 
+}
+
+.card-flipper {
+  position: relative;
+  width: 80%;
+  padding-bottom: 50%;
+  transform-style: preserve-3d;
+  transition: transform 0.8s;
+}
+
+.card-flipper:hover {
+  cursor: pointer;
+}
+
+.card-face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-face img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 10px;
+}
+
+.card-back {
+  transform: rotateY(180deg);
 }
 
 .how-it-works-image img {
