--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,12 @@ h1 {
   font-size: clamp(2.5rem, 6vw, 3.5rem);
 }
 
+h1 small {
+  font-size: clamp(1.5rem, 3vw, 1.75rem);
+  display: block;
+}
+
+
 h2 {
   font-size: clamp(2rem, 5vw, 2.5rem);
   text-align: center;
