--- a/css/style.css
+++ b/css/style.css
@@ -307,15 +307,32 @@ section {
 
 /* --- Rodapé --- */
 footer {
-  background-color: #111;
   color: #aaa;
-  text-align: center;
   padding: 30px 0;
+  background: var(--dark-color)
+    url("https://www.transparenttextures.com/patterns/carbon-fibre.png");
+  color: var(--white-color);
+  text-align: center;
 }
 
 footer .logo {
   font-size: 1.5rem;
-  margin-bottom: 10px;
+}
+
+.social-links {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+}
+
+.social-links a {
+  color: #fff;
+  font-size: 3rem;
+  transition: color 0.2s;
+}
+
+.social-links a:hover {
+  color: var(--secondary-color);
 }
 
 /* --- Responsividade --- */
