--- a/css/style.css
+++ b/css/style.css
@@ -294,8 +294,7 @@ section {
 }
 
 .cta-section {
-  background: var(--dark-color)
-    url("https://www.transparenttextures.com/patterns/carbon-fibre.png");
+  background: var(--dark-color);
   color: var(--white-color);
   text-align: center;
 }
@@ -333,6 +332,23 @@ footer .logo {
 
 .social-links a:hover {
   color: var(--secondary-color);
+}
+
+a.modal-link {
+  color: var(--white-color);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a.modal-link:visited {
+  color: var(--white-color);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+span.trade-mark {
+  font-size: 1.8rem;
+  color: #ccc;
 }
 
 /* --- Responsividade --- */
@@ -504,4 +520,41 @@ footer .logo {
 .accordion-answer.active {
   max-height: 300px; /* Adjust as needed */
   transition: max-height 0.5s ease-in;
+}
+
+/* --- Modal --- */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1001;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 800px;
+  position: relative;
+}
+
+.close-button {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
