--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,6 @@ p {
 .hero {
   background-color: var(--dark-color);
   color: var(--white-color);
-  padding-bottom: 60px;
 }
 
 .navbar {
@@ -170,7 +169,7 @@ p {
 
 .hero-content {
   text-align: center;
-  padding: 80px 0;
+  padding: 80px 0 30px 0;
 }
 
 .hero-content .subtitle {
