--- a/css/style.css
+++ b/css/style.css
@@ -318,9 +318,25 @@ section {
 }
 
 .cta-section {
-  background: var(--dark-color);
+  position: relative;
   color: var(--white-color);
   text-align: center;
+  background-image: url("../images/grid_of_cards.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  z-index: 1;
+}
+
+.cta-section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
 }
 
 .cta-section p {
