--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,10 @@ section {
   margin: 0 auto 30px;
 }
 
+.cta-content {
+  transition: transform 0.1s linear;
+}
+
 /* --- Rodapé --- */
 footer {
   color: #aaa;
